feat: integrate auth system and db

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # testing
 /coverage
 
+# Ignore Prisma-generated files
+/src/generated/
+
 # next.js
 /.next/
 /out/
@@ -39,3 +42,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# clerk configuration (can include secrets)
+/.clerk/
