--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
+    "motion": "^12.12.2",
     "mysql": "^2.18.1",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
