--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/themes": "^2.2.46",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
+    "@prisma/extension-accelerate": "^2.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
