--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-query": "^5.77.2",
+    "@tanstack/react-table": "^8.21.3",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mysql": "^2.15.27",
