--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "dotted-map": "^2.2.3",
     "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
